--- a/swift/Podfile
+++ b/swift/Podfile
@@ -1,12 +1,11 @@
 # Uncomment this line to define a global platform for your project
 source 'https://github.com/Cocoapods/Specs.git'
-platform :ios, '8.0'
+#platform :ios, '8.0'
 
 target 'O365-iOS-Connect-Swift' do
 
-pod 'ADALiOS', '~> 1.2.1'
+pod 'ADALiOS'
 pod 'Office365/Outlook', '= 0.9.1'
 pod 'Office365/Discovery', '= 0.9.1'
 
 end
-
