--- a/objective-c/Podfile
+++ b/objective-c/Podfile
@@ -5,9 +5,9 @@ platform :ios, '8.0'
 
 target 'O365-iOS-Connect' do
 
-pod 'ADALiOS', '~> 1.2.1'
-pod 'Office365/Outlook', '= 0.9.1'
-pod 'Office365/Discovery', '= 0.9.1'
+pod 'ADALiOS'
+pod 'Office365/Outlook'
+pod 'Office365/Discovery'
 
 end
 
